--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "game-of-life",
+  "name": "klutchkick-media-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,26 +13,36 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "css-reset-udyux": "^1.0.5",
     "lodash.debounce": "^4.0.8",
     "lodash.omit": "^4.5.0",
+    "lodash.orderby": "^4.6.0",
+    "pinia": "^2.0.30",
     "simplebar": "^5.3.9",
     "tiny-emitter": "^2.1.0",
+    "uuid": "^9.0.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "youtube-player": "^5.6.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/fs-extra": "^9.0.13",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.omit": "^4.5.7",
+    "@types/lodash.orderby": "^4.6.7",
     "@types/node": "^18.11.12",
+    "@types/string-similarity": "^4.0.0",
+    "@types/uuid": "^9.0.1",
+    "@types/youtube-player": "^5.5.7",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -40,12 +50,12 @@
     "fs-extra": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
-    "postcss-combine-media-query": "^1.0.1",
     "postcss-custom-media": "^9.0.1",
+    "postcss-sort-media-queries": "^4.3.0",
     "prettier": "^2.7.1",
     "sass": "^1.57.1",
-    "stylelint": "^15.0.0",
-    "stylelint-config-udyux": "^5.1.2",
+    "stylelint": "^14.16.1",
+    "stylelint-config-udyux": "^5.2.3",
     "svgo": "^3.0.2",
     "svgstore": "^3.0.1",
     "typescript": "~4.7.4",
