--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node svgsprite && vite",
+    "lan": "node svgsprite && vite --host",
     "build": "run-p sprite type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -16,8 +17,11 @@
     "axios": "^1.3.3",
     "css-reset-udyux": "^1.0.5",
     "lodash.debounce": "^4.0.8",
+    "lodash.get": "^4.4.2",
     "lodash.omit": "^4.5.0",
     "lodash.orderby": "^4.6.0",
+    "lodash.set": "^4.3.2",
+    "matchmediaquery": "^0.3.1",
     "pinia": "^2.0.30",
     "simplebar": "^5.3.9",
     "tiny-emitter": "^2.1.0",
@@ -30,8 +34,10 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/fs-extra": "^9.0.13",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/lodash.get": "^4.4.7",
     "@types/lodash.omit": "^4.5.7",
     "@types/lodash.orderby": "^4.6.7",
+    "@types/lodash.set": "^4.3.7",
     "@types/node": "^18.11.12",
     "@types/string-similarity": "^4.0.0",
     "@types/uuid": "^9.0.1",
